--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap');
+
 @import "tailwindcss";
+
+:root {
+    --font-league-spartan: 'League Spartan', sans-serif;
+}
+
+@theme {
+    --font-display: "League Spartan", "sans-serif";
+    --breakpoint-3xl: 120rem;
+    --breakpoint-sm:375px;
+    --breakpoint-3xl:1440px;
+    --color-cyan-500: hsl(180, 29%, 50%);
+    --color-cyan-100: hsl(180, 52%, 96%);
+    --color-cyan-200: hsl(180, 31%, 95%);
+    --color-cyan-700: hsl(180, 8%, 52%);
+    --color-cyan-900: hsl(180, 14%, 20%);
+}
+
+.radix-themes {
+    /* --color-dark-cyan: hsl(180, 29%, 50%);
+    --color-light-grayish-cyan-bg: hsl(180, 52%, 96%);
+    --color-light-grayish-cyan-filter-tablets: hsl(180, 31%, 95%);
+    --color-dark-grayish-cyan: hsl(180, 8%, 52%);
+    --color-very-dark-grayish-cyan: hsl(180, 14%, 20%); */
+    --color-cyan-500: hsl(180, 29%, 50%);
+    --color-cyan-100: hsl(180, 52%, 96%);
+    --color-cyan-200: hsl(180, 31%, 95%);
+    --color-cyan-700: hsl(180, 8%, 52%);
+    --color-cyan-900: hsl(180, 14%, 20%);
+    --default-font-family: var(--font-league-spartan)
+}
